eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formulating-api-deployment
  labels:
    app: formulating-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formulating-api
  template:
    metadata:
      labels:
        app: formulating-api
    spec:
      containers:
        - name: formulating-api
          image: 862881304980.dkr.ecr.eu-north-1.amazonaws.com/formulating:eab42302fd015d13c81ef0ec02360581a5f23960
          ports:
            - containerPort: 8080
