eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: formulating-api-service
spec:
  selector:
    app: formulating-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
